fix(wrap): wrapping code block

--- a/static/css/markdown.css
+++ b/static/css/markdown.css
@@ -22,6 +22,12 @@
   max-width: 100%;
 }
 
+.g3-markdown-wrapper pre,
+.g3-markdown-wrapper code {
+  max-width: calc(1220px - 320px - 40px);
+  overflow-x: scroll;
+}
+
 @media screen and (max-width: 700px) {
   .g3-markdown-wrapper {
     width: 100%;
